[package]
name = "rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3.28"
iced = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.3.3", features = ["v4", "rand", "serde"] }
